--- a/templates/answer.html
+++ b/templates/answer.html
@@ -62,7 +62,7 @@
     <p style="border-style: groove; border-color:black">{{wikipedia_answer}}</p>
     <p><b><h3>Wikipedia Summary</h3></b></p>
     <p style="border-style: groove; border-color:black">{{wikipedia_summary}}</p>
-    <p><b><h3>Transcript_Answer</h3></b></p>
+    <p><b><h3>Transcript Answer</h3></b></p>
     <p style="border-style: groove; border-color:black">{{transcript_answer}}</p>
     <p><b><h3>Transcript Summary</h3></b></p>
     <p style="border-style: groove; border-color:black">{{transcript_summary}}</p>
@@ -71,7 +71,7 @@
 <br>
 
 
-<iframe style = "margin-left: auto; margin-right:auto; display:block" width="30%" height="315" src="{{ url_for('static', filename='video1339622221.mp4') }}" type="video/mp4" frameborder="0" style="bottom:100; position:absolute;" sandbox></iframe>
+<iframe style = "margin-left: auto; margin-right:auto; display:block" width="30%" height="315" src="{{ url_for('static', filename=video_file_name) }}" type="video/mp4" frameborder="0" style="bottom:100; position:absolute;" sandbox></iframe>
  <br>
 </body>
 </html>
